# baseline

./: README.md  pyproject.toml
src/predicates/: functions.py  proofs.py  syntax.py
src/propositions/: deduction.py  proofs.py  some_proofs.py  soundness.py
tests/hw/: test_hw01.py  test_hw09.py  test_hw10.py
