[tool.poetry]
name = "math-logic"
version = "0.1.0"
description = ""
authors = ["ayvor-team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120